--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Activitys.MainActivity">
 
     <include
-        layout="@layout/toolbar_layout"/>
-    
+        android:id="@+id/include_toolbar"
+        layout="@layout/toolbar_layout" />
+
     <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tabs"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
+        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
         app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/colorAccent"
         app:tabTextColor="#fff"
-        app:tabSelectedTextColor="@color/colorAccent"></android.support.design.widget.TabLayout>
-    
+        tools:layout_editor_absoluteX="0dp"></android.support.design.widget.TabLayout>
+
     <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/pager"></android.support.v4.view.ViewPager>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
