--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,16 +7,6 @@
     android:layout_gravity="center"
     tools:context=".Fragments.MainFragment">
 
-    <ListView
-        android:id="@+id/listViewGincanasId"
-        android:layout_width="match_parent"
-        android:layout_height="518dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabs" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton_addGincana"
         android:layout_width="73dp"
@@ -27,10 +17,23 @@
         android:layout_marginRight="36dp"
         android:layout_marginBottom="52dp"
         android:clickable="true"
-        app:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_action_add"
+        app:backgroundTint="@color/colorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.929"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_action_add" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ListView
+        android:id="@+id/listViewGincanasId"
+        android:layout_width="match_parent"
+        android:layout_height="518dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabs" >
+
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
