--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="colorPrimary">#00c853</color>
     <color name="colorPrimaryLight">#5efc82</color>
-    <color name="colorSecondary">#000b66</color>
-    <color name="colorSecondaryLight">#423395</color>
-    <color name="colorSecondaryDark">#00003b</color>
+    <color name="colorSecondary">#c60000</color>
+    <color name="colorSecondaryLight">#ff4e2f</color>
+    <color name="colorSecondaryDark">#8d0000</color>
     <color name="colorSecondaryText">#ffffff</color>
     <color name="colorPrimaryDark">#009624</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorPrimaryText">#000000</color>
+    <color name="colorPrimaryText">#000000</color>>
 </resources>
