--- a/app/src/main/res/layout/fragment_convidado.xml
+++ b/app/src/main/res/layout/fragment_convidado.xml
@@ -3,13 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.ConvidadoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listViewGincanasConvidadosId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment Convidado"
-        android:id="@+id/txt_fragment_convidado"/>
+        android:layout_height="518dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabs" >
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
