--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -24,14 +24,14 @@
         android:id="@+id/editText_cadastroNome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginBottom="487dp"
         android:ems="10"
         android:hint="Digite o seu nome"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_teste" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editText_cadastroSenha"
@@ -45,20 +45,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_cadastroEmail" />
-
-    <TextView
-        android:id="@+id/textView_teste"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:fontFamily="monospace"
-        android:text="Cadastro"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="50dp"
-        android:typeface="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText_cadastroEmail"
